codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__background_task_defaults_tests__command_center_pending_server_permissions.snap
---
source: tui/src/app/tests/background_task_defaults_tests.rs
expression: "crate::chatwidget::tests::helpers::render_bottom_popup(&app.chat_widget, 80)"
---
  Unable to complete action
  Wait for permissions to update before starting a session.

› 1. Return to command center

  按  enter 确 认 ， 或 按  esc 返 回
